--- a/RK1/style.css
+++ b/RK1/style.css
@@ -2,6 +2,12 @@
 margin: 0;
 padding: 0;
 }
+body{
+background: rgba(0, 0, 0, 0.5) url('img/dinosaur-era_186469-1600x1200.jpg');
+background-size: cover;
+background-attachment: fixed;
+background-repeat: no-repeat;
+}
 .flex{
 display: flex;
 max-width: 1300px; 
@@ -82,4 +88,8 @@ font-weight: 600;
 font-size: 12px;
 text-align: center;
 margin-left:46%;
+}
+.tablaaa{
+width: 100px;
+height: 100px;
 }
