--- a/RK1/game.css
+++ b/RK1/game.css
@@ -47,3 +47,13 @@ box-shadow: 1px 1px 3px #000;
 .close:hover {
 background-color:#f30;
 } 
+ul {
+list-style: none; 
+margin: 0; 
+padding-left: 0; 
+}
+li{
+display: inline;
+font-size: 42px;
+text-align: center;
+}
